# Properwrite1

./: .gitignore  .replit  ZAPIER_INTEGRATION.md  ZAPIER_SETUP_GUIDE.md  acquisitions_module.py  add_accepted_at_column.py  add_credits_to_users.py  add_missing_columns.py  add_onboarding_tables.py  address_utils.py  address_validation_service.py  admin_api.py  admin_database_models.py  admin_models.py  admin_routes.py  admin_routes_minimal.py  affiliate_api.py  affiliate_credit_audit_report.json  affiliate_models.py  affiliate_service.py  affiliate_system_demo.html  ai_exit_strategy_assistant.py  ai_listing_generator.py  ai_strategy_assistant.py  app.py  app_simple.py  app_upgraded.py  audit_results.json  auth_middleware.py  auth_routes.py  auth_service.py  billing_config.py  billing_models.py  billing_service.py  bitcoin_payment_service.py  check_user_credits.py  check_user_table.py  cleanup_ghost_teams.py  comprehensive_system_test.py  comprehensive_valuation_service.py  (+104 more)
archived_files/: app.py  app_simple.py  index.html  presentation_clean.html  presentation_simple.html
attached_assets/: Copy of Full Renovation Estimator (Installer) (1)_1752519996321.xlsx  Copy of Full Renovation Estimator (Installer)_1752519996321.xlsx  MAO Offer Calc (1)_1750346973054.xlsx  Mao Calc Formulas_1750346973053.xlsx  Pasted--AFFILIATE-CREDIT-CODE-SYSTEM-FULL-AUDIT-TASK-OBJECTIVE-1-Diagn-1752775838049_1752775838050.txt  Pasted--Add-AI-Objection-Handler-Panel-to-Acquisitions-Build-an-AI-powered-objection-handling-assistant-i-1750961363051_1750961363051.txt  (+98 more)
audit/: QA-notes.md  (+6 more)
(+154 files in other folders)
