[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "email-validator>=2.3.0",
    "flask>=3.1.3",
    "flask-sqlalchemy>=3.1.1",
    # gunicorn 26.x changed worker class defaults; pinned to <26 until smoke-tested.
    "gunicorn>=23.0.0,<26",
    # lxml 6.x dropped Python 3.8 wheels and reworked CFFI bindings; defer.
    "lxml>=5.4.0,<6",
    "psycopg2-binary>=2.9.12",
    "requests-html>=0.10.0",
    "requests>=2.34.1",
    "selenium>=4.44.0",
    "trafilatura>=2.0.0",
    # openai 2.x is a breaking rewrite even though the OpenAI() client surface is preserved; defer.
    "openai>=1.91.0,<2",
    "pyjwt>=2.12.1",
    # stripe 13+ changed several legacy method signatures and webhook payload helpers; defer.
    "stripe>=12.3.0,<13",
    "sqlalchemy>=2.0.49",
    "flask-dance>=7.1.0",
    "flask-login>=0.6.3",
    "oauthlib>=3.3.1",
    "python-dotenv>=1.2.2",
    "werkzeug>=3.1.8",
    "sendgrid>=6.12.5",
    "flask-wtf>=1.3.0",
    # flask-limiter 4.x renamed some storage-uri keys and changed deprecation paths; defer.
    "flask-limiter>=3.12,<4",
]
